--- a/index.html
+++ b/index.html
@@ -5,8 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coding Assessment</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
-    
+    <header>
+        <h4>Timer: <span id="count">60</span></h4>
+    </header>
+
+    <main class="wrapper">
+        <div class="container">
+            <div class="card-contents">
+                <h1>
+                    Coding Quiz Challenge
+                </h1>
+                <p>
+                    Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!
+                </p>
+                <div class="">
+                    <button class="btn" id="start-quiz" type="submit">Start Quiz</button>
+                </div>
+            </div>
+        </div>
+
+    </main>
 </body>
+
 </html>
