added countdown function and functionality to start the timer when the start quiz button is selected

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h4>Timer: <span id="count">60</span></h4>
+        <h4 id="countdown">Timer: </h4>
     </header>
 
     <main class="wrapper">
@@ -29,6 +29,7 @@
         </div>
 
     </main>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
