set up timer/ added first question and second question if statements/ added initial variables

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <h4 id="countdown">Timer: </h4>
     </header>
 
-    <main class="wrapper">
+    <!-- <main class="wrapper">
         <div class="container">
             <div class="card-contents">
-                <h1>
+                <h1 id="header-1">
                     Coding Quiz Challenge
                 </h1>
-                <p>
+                <p id="p-1">
                     Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!
                 </p>
                 <div class="">
@@ -28,7 +28,7 @@
             </div>
         </div>
 
-    </main>
+    </main> -->
     <script src="./assets/js/script.js"></script>
 </body>
 
