--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h4 id="countdown">Timer: </h4>
     </header>
 
-    <!-- <main class="wrapper">
+    <main class="main-container">
         <div class="container">
             <div class="card-contents">
                 <h1 id="header-1">
@@ -28,7 +28,7 @@
             </div>
         </div>
 
-    </main> -->
+    </main>
     <script src="./assets/js/script.js"></script>
 </body>
 
