refactored code with tutor

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 
         <div class="container">
             <div id="question-container" class="hide">
+                <div id="question">Question</div>
                 <div id="answer-buttons" class="btn-grid">
-                    <button class="btn">Answer 1</button>
-                    <button class="btn">Answer 2</button>
-                    <button class="btn">Answer 3</button>
-                    <button class="btn">Answer 4</button>
+                    <button id="btn-1"class="btn">Answer 1</button>
+                    <button id="btn-2"class="btn">Answer 2</button>
+                    <button id="btn-3"class="btn">Answer 3</button>
+                    <button id="btn-4"class="btn">Answer 4</button>
                 </div>
             </div>
 
@@ -32,7 +33,7 @@
 
             <div class="controls">
                 <button class="start-btn btn" id="start-btn" type="submit">Start Quiz</button>
-                <button class="next-btn btn hide" id="start-btn" type="submit">Next</button>
+                <button class="next-btn btn hide" id="next-btn" type="submit">Next</button>
             </div>
             <div><h4 id="countdown">Timer: </h4></div>
         </div>
