updated game over and adding score to local storage

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
                 </div>
             </div>
 
+        
+            <div id="end-game" class="hide">
+                <h1 id="game-over">Game Over</h1>
+                <p id="score"></p>
+                <p>Enter initials</p>
+            </div>
+
             <div>
             <h1 id="header-1">Coding Quiz Challenge</h1>
             <p id="p-1">
