added readme file

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                 </div>
             </div>
 
-        
             <div id="end-game" class="hide">
                 <h1 id="game-over">Game Over</h1>
                 <p id="score"></p>
-                <p>Enter initials</p>
+                <input id="initials" type="text" name="name-initials" placeholder="Enter Initials" />
+                <button class="btn" id="save-initials" type="submit">Submit</button>
             </div>
 
             <div>
